--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -263,9 +263,9 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/1.png" class="papericon" width="300"></td>
+      <td class="pub_td1"><img src="./PaperFig/5.png" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>[5]Single-Target Real-Time Passive WiFi Tracking</b>
+        <b>[5]Computer Vision-assisted 3D Object Localization via COTS RFID Devices and a Monocular Camera</b>
         <br>
         <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
          which can achieve single-target real-time passive tracking using channel state 
@@ -279,9 +279,9 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/1.png" class="papericon" width="300"></td>
+      <td class="pub_td1"><img src="./PaperFig/6.png" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>[6]Single-Target Real-Time Passive WiFi Tracking</b>
+        <b>[6]Recognizing 3D Orientation of a Two-RFID-Tag Labeled Object in Multipath Environments Using Deep Transfer Learning</b>
         <br>
         <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
          which can achieve single-target real-time passive tracking using channel state 
@@ -295,9 +295,9 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/1.png" class="papericon" width="300"></td>
+      <td class="pub_td1"><img src="./PaperFig/7.png" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>[7]Single-Target Real-Time Passive WiFi Tracking</b>
+        <b>[7]RF-Mirror: Mitigating Mutual Coupling Interference in Two-Tag Array Labeled RFID Systems</b>
         <br>
         <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
          which can achieve single-target real-time passive tracking using channel state 
@@ -312,9 +312,9 @@
 
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/1.png" class="papericon" width="300"></td>
+      <td class="pub_td1"><img src="./PaperFig/8.png" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>[8]Single-Target Real-Time Passive WiFi Tracking</b>
+        <b>[8] RF-Focus: Computer Vision-assisted Region-of-interest RFID Tag Recognition and Localization in Multipath-prevalent Environments</b>
         <br>
         <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
          which can achieve single-target real-time passive tracking using channel state 
@@ -328,9 +328,9 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/1.png" class="papericon" width="300"></td>
+      <td class="pub_td1"><img src="./PaperFig/9.png" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>[9]Single-Target Real-Time Passive WiFi Tracking</b>
+        <b>[9]RF-MVO: Simultaneous 3D Object Localization and Camera Trajectory Recovery Using RFID Devices and a 2D Monocular Camera</b>
         <br>
         <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
          which can achieve single-target real-time passive tracking using channel state 
@@ -344,9 +344,9 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/1.png" class="papericon" width="300"></td>
+      <td class="pub_td1"><img src="./PaperFig/10.png" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>[10]Single-Target Real-Time Passive WiFi Tracking</b>
+        <b>[10]A See-Through-wall System for Device-free Human Motion Sensing Based on Battery-free RFID</b>
         <br>
         <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
          which can achieve single-target real-time passive tracking using channel state 
@@ -360,9 +360,9 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/1.png" class="papericon" width="300"></td>
+      <td class="pub_td1"><img src="./PaperFig/11.png" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>[11]Single-Target Real-Time Passive WiFi Tracking</b>
+        <b>[11]One More Tag Enables Fine-Grained RFID Localization and Tracking</b>
         <br>
         <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
          which can achieve single-target real-time passive tracking using channel state 
@@ -376,9 +376,9 @@
     </tr>
     
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/1.png" class="papericon" width="300"></td>
+      <td class="pub_td1"><img src="./PaperFig/12.png" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>[12]Single-Target Real-Time Passive WiFi Tracking</b>
+        <b>[12]TrackT: Accurate Tracking of RFID Tags with mm-level Accuracy Using First-order Taylor Series Approximation</b>
         <br>
         <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
          which can achieve single-target real-time passive tracking using channel state 
@@ -392,9 +392,9 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./PaperFig/1.png" class="papericon" width="300"></td>
+      <td class="pub_td1"><img src="./PaperFig/13.png" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>[13]Single-Target Real-Time Passive WiFi Tracking</b>
+        <b>[13]TMicroscope: Behavior Perception Based on the Slightest RFID Tag Motion</b>
         <br>
         <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
          which can achieve single-target real-time passive tracking using channel state 
@@ -460,6 +460,40 @@
 
   <H2>DEMO</H2>
   <table class="pub_table">
+    <tr>
+      <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>Head Pose Estimation via mmWave Radar</b>
+        <br>
+        <br>In this study, we introduce mmHead, a novel human head 
+        posture estimation system using mmWave radar technology. In
+        the initial phase, we utilized FFT and static interference removal
+        techniques to extract head pose features, aiming to mitigate
+        environmental noise and user variations. 
+        <br>
+        <ul>
+          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
+        </ul>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>Head Pose Estimation via mmWave Radar</b>
+        <br>
+        <br>In this study, we introduce mmHead, a novel human head 
+        posture estimation system using mmWave radar technology. In
+        the initial phase, we utilized FFT and static interference removal
+        techniques to extract head pose features, aiming to mitigate
+        environmental noise and user variations. 
+        <br>
+        <ul>
+          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
+        </ul>
+      </td>
+    </tr>
+
     <tr>
       <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
