--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -251,10 +251,10 @@
       <td class="pub_td2">
         <b>[4]Accurate AoA Estimation for RFID Tag Array with Mutual Coupling</b>
         <br>
-        <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
-         which can achieve single-target real-time passive tracking using channel state 
-         information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
-         We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
+        <br>In this article, we propose a scheme called RF-Mirror that can resolve the mutual coupling and phase jump 
+        problems and achieve accurate AoA estimation for an array with two or more tags.  First, we characterize the 
+        impact of mutual coupling on a tag’s signal fingerprint and develop novel RSSI/phase-distance models.  We then 
+        develop new experimental methods and signal processing techniques to verify the effectiveness of the proposed models. 
         <br>
         <ul>
           <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
