--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -267,10 +267,8 @@
       <td class="pub_td2">
         <b>[5]Computer Vision-assisted 3D Object Localization via COTS RFID Devices and a Monocular Camera</b>
         <br>
-        <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
-         which can achieve single-target real-time passive tracking using channel state 
-         information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
-         We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
+        <br>In this article, we present RF-MVO that fuses RFID and computer vision for stationary RFID localization 
+        in 3D space by attaching a light-weight 2D monocular camera to two reader antennas in parallel.
         <br>
         <ul>
           <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
@@ -283,10 +281,10 @@
       <td class="pub_td2">
         <b>[6]Recognizing 3D Orientation of a Two-RFID-Tag Labeled Object in Multipath Environments Using Deep Transfer Learning</b>
         <br>
-        <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
-         which can achieve single-target real-time passive tracking using channel state 
-         information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
-         We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
+        <br> In this paper, we propose RF-Orien3D that minimizes these interferences for accurate 3D orientation 
+        recognition only using two RFID tags. The electromagnet interference modifies the radiation pattern and 
+        modulation factor of each tag in the two-element tag array, which can be estimated to compensate for the 
+        distortion in RFID fingerprints.
         <br>
         <ul>
           <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
