--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -297,10 +297,9 @@
       <td class="pub_td2">
         <b>[7]RF-Mirror: Mitigating Mutual Coupling Interference in Two-Tag Array Labeled RFID Systems</b>
         <br>
-        <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
-         which can achieve single-target real-time passive tracking using channel state 
-         information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
-         We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
+        <br> In this paper, we present RF-Mirror that enables compensating the distortion in a two-tag array 
+        labeled RFID system. The system would output the accurate difference in tag-to-antenna distances between 
+        two tags, which is a fundamental parameter in previous works for use.
         <br>
         <ul>
           <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
@@ -314,10 +313,8 @@
       <td class="pub_td2">
         <b>[8] RF-Focus: Computer Vision-assisted Region-of-interest RFID Tag Recognition and Localization in Multipath-prevalent Environments</b>
         <br>
-        <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
-         which can achieve single-target real-time passive tracking using channel state 
-         information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
-         We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
+        <br> In this paper, we propose a comprehensive solution, called RF-Focus, which fuses RFID and computer vision (CV) 
+        techniques to recognize and locate moving RFID-tagged objects within ROI. 
         <br>
         <ul>
           <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
@@ -330,10 +327,9 @@
       <td class="pub_td2">
         <b>[9]RF-MVO: Simultaneous 3D Object Localization and Camera Trajectory Recovery Using RFID Devices and a 2D Monocular Camera</b>
         <br>
-        <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
-         which can achieve single-target real-time passive tracking using channel state 
-         information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
-         We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
+        <br>this paper presents RF-MVO, which fuses battery-free RFID and monocular visual odometry to locate stationary 
+        RFID tags in a 3D space and recover an unknown trajectory of reader antennas binding with a 2D monocular camera. 
+        The proposed hybrid system exhibits three unique features.
         <br>
         <ul>
           <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
@@ -346,10 +342,10 @@
       <td class="pub_td2">
         <b>[10]A See-Through-wall System for Device-free Human Motion Sensing Based on Battery-free RFID</b>
         <br>
-        <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
-         which can achieve single-target real-time passive tracking using channel state 
-         information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
-         We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
+        <br>Recently, a low-cost RFID technology has gained a lot of attention in this field. 
+        Since phase estimates of a battery-free RFID tag collected by a commercial off-the-shelf (COTS) RFID reader 
+        are sensitive to external interference, the RFID tag could be regarded as a battery-free sensor that detects 
+        reflections off targeted objects. 
         <br>
         <ul>
           <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
