--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -358,10 +358,11 @@
       <td class="pub_td2">
         <b>[11]One More Tag Enables Fine-Grained RFID Localization and Tracking</b>
         <br>
-        <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
-         which can achieve single-target real-time passive tracking using channel state 
-         information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
-         We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
+        <br>In this paper, we propose a comprehensive localization and tracking scheme by attaching two RFID tags to one 
+        object. Instead of using per-tag localization pattern, adding one-more RFID tag to the object exhibits several 
+        benefits: 1) providing rich freedom in RFID reader's antenna spacing and placement; 2) supporting accurate 
+        calibration of the reader's antenna location and spacing, and 3) enabling fine-grained calculation on the 
+        orientation of the tags. All of these advantages ultimately improve the localization/tracking accuracy. 
         <br>
         <ul>
           <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
