--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -375,10 +375,10 @@
       <td class="pub_td2">
         <b>[12]TrackT: Accurate Tracking of RFID Tags with mm-level Accuracy Using First-order Taylor Series Approximation</b>
         <br>
-        <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
-         which can achieve single-target real-time passive tracking using channel state 
-         information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
-         We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
+        <br>In this work, we propose a method based on measured phase to track mobile RFID tags with millimeter level 
+        (mm-level) accuracy. We first partition the surveillance region into square grids at mm-level and suppose that 
+        there is a virtual tag as the same as the tracked one in each grid. On this basis, for the case where the tags 
+        move along a known track with constant speed, we only need to locate the tag's initial position. 
         <br>
         <ul>
           <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
@@ -391,10 +391,11 @@
       <td class="pub_td2">
         <b>[13]TMicroscope: Behavior Perception Based on the Slightest RFID Tag Motion</b>
         <br>
-        <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
-         which can achieve single-target real-time passive tracking using channel state 
-         information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
-         We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
+        <br>In this paper, we propose a RFID-based method to perceive slight motion of a target product with RFID 
+        tag for mining customer’s behaviors.   We first compute virtual displacements of the target RFID tag and 
+        then adopt Support Vector Machines to recognize absence or presence of human motion near the tag. 
+        Next, we divide the surveillance region into mm-level grids to construct similarity matrixes of the 
+        tracked tag before and after human motion, which can accurately distinguish absence or presence of tag motion.
         <br>
         <ul>
           <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
