--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -404,7 +404,7 @@
     </tr>
 
 
-  </table>
+  <!--</table>
   <p>[1] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
     Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
     no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
@@ -452,7 +452,7 @@
      TMicroscope: Behavior Perception Based on the Slightest RFID Tag Motion. 
      <i>Elektronika ir Elektrotechnika</i>, vol. 22, no. 2, pp.114-122, 2016. 
      <i>(JCR Q3, IF: 1.059)</i></p>
-
+  -->
 
   <H2>DEMO</H2>
   <table class="pub_table">
