--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -453,7 +453,7 @@
      <i>Elektronika ir Elektrotechnika</i>, vol. 22, no. 2, pp.114-122, 2016. 
      <i>(JCR Q3, IF: 1.059)</i></p>
   -->
-
+  </table>
   <H2>DEMO</H2>
   <table class="pub_table">
     <tr>
