--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -459,16 +459,16 @@
     <tr>
       <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>Head Pose Estimation via mmWave Radar</b>
+        <b>mmWave Radar Sensing</b>
         <br>
-        <br>In this study, we introduce mmHead, a novel human head 
-        posture estimation system using mmWave radar technology. In
-        the initial phase, we utilized FFT and static interference removal
-        techniques to extract head pose features, aiming to mitigate
-        environmental noise and user variations. 
-        <br>
+        <br><b>Environmental Awareness:</b> Detects an empty room, moving humans, static humans, and both moving and static humans simultaneously.
+        <br><b>People Counting:</b> Achieves a median accuracy of 96.1% for counting 2-3 people in a 25m² room.
+        <br><b>Multi-Target Motion Tracking:</b> Tracks multiple human movement trajectories, providing spatial positions, speeds, and acceleration for each target.
+        <br><b>Vital Sign Estimation:</b> Monitors breathing and heart rates of multiple static humans and provides their spatial positions.
+        <br><b>Fall Detection:</b> Detects multiple human falls and issues timely alerts.
+        <br><b>Real-Time Performance:</b> Ensures computation time is less than the sampling time for all functions, guaranteeing real-time performance without delays.
         <ul>
-          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
+          <li class="line-height-10">Full demo:<A href="https://youtu.be/7ni5InGPi1A"> https://youtu.be/7ni5InGPi1A</A>;</li>
         </ul>
       </td>
     </tr>
