--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -473,6 +473,23 @@
     <tr>
       <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
+        <b>Head Pose Estimation via mmWave Radar</b>
+        <br>
+        <br>In this study, we introduce mmHead, a novel human head 
+        posture estimation system using mmWave radar technology. In
+        the initial phase, we utilized FFT and static interference removal
+        techniques to extract head pose features, aiming to mitigate
+        environmental noise and user variations. 
+        <br>
+        <ul>
+          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
+        </ul>
+      </td>
+    </tr>
+    
+    <tr>
+      <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
+      <td class="pub_td2">
         <b>Single-Target Real-Time Passive WiFi Tracking</b>
         <br>
         <br>In this work, we present WiFi Doppler Frequency Shift (WiDFS), a scheme for real-time passive 
@@ -484,6 +501,7 @@
         </ul>
       </td>
     </tr>
+
 
     <tr>
       <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
