--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -471,7 +471,7 @@
     </tr>
 
     <tr>
-      <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
+      <td class="pub_td1"><img src="./files/demo_2.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
         <b>Head Pose Estimation via mmWave Radar</b>
         <br>
@@ -486,33 +486,34 @@
         </ul>
       </td>
     </tr>
-    
+
     <tr>
-      <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
+      <td class="pub_td1"><img src="./files/demo_3.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>Single-Target Real-Time Passive WiFi Tracking</b>
+        <b>Single tag RFID passive sensing and location</b>
         <br>
-        <br>In this work, we present WiFi Doppler Frequency Shift (WiDFS), a scheme for real-time passive 
-        single-target tracking using channel state information (CSI) from commercial WiFi devices. The system 
-        setup includes a single-antenna transmitter and a receiver with three antennas. 
+        <br>We developed a high-sensitivity RFID-based security system that uses passive RFID tags for active 
+        target localization. By leveraging Phase Difference of Arrival (PDoA), the system tracks the trajectory 
+        of passive RFID tags. It detects whether objects with attached RFID tags are moved within monitored areas 
+        with human activity. 
         <br>
         <ul>
-          <li class="line-height-10">Full demo:<A href="https://youtu.be/UvceJ2OnJmE"> https://youtu.be/UvceJ2OnJmE</A>;</li>
+          <li class="line-height-10">Full demo1:<A href="https://www.youtube.com/watch?v=a2M32Vg66Kc"> https://www.youtube.com/watch?v=a2M32Vg66Kc</A>;</li>
+          <li class="line-height-10">Full demo2:<A href="https://www.youtube.com/watch?v=iz98y3m6A64"> https://www.youtube.com/watch?v=iz98y3m6A64</A>;</li>
         </ul>
       </td>
     </tr>
 
 
     <tr>
-      <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
+      <td class="pub_td1"><img src="./files/demo_4.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>Head Pose Estimation via mmWave Radar</b>
+        <b>Multi-tag RFID passive sensing</b>
         <br>
-        <br>In this study, we introduce mmHead, a novel human head 
-        posture estimation system using mmWave radar technology. In
-        the initial phase, we utilized FFT and static interference removal
-        techniques to extract head pose features, aiming to mitigate
-        environmental noise and user variations. 
+        <br>Compared to single-tag systems, using a multi-tag array on a tracked object offers significant advantages. 
+        The multi-tag array provides more signal fingerprints for characterizing the target's motion patterns and enables 
+        spatial direction recognition. Applications include spatial direction recognition, positioning and tracking, 
+        breathing and heart rate detection, and behavior identification.
         <br>
         <ul>
           <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
