--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -490,20 +490,28 @@
     <tr>
       <td class="pub_td1"><img src="./files/demo_3.gif" class="papericon" width="300"></td>
       <td class="pub_td2">
-        <b>Single tag RFID passive sensing and location</b>
+        <b>Active target location based on passive RFID</b>
         <br>
-        <br>We developed a high-sensitivity RFID-based security system that uses passive RFID tags for active 
-        target localization. By leveraging Phase Difference of Arrival (PDoA), the system tracks the trajectory 
-        of passive RFID tags. It detects whether objects with attached RFID tags are moved within monitored areas 
-        with human activity. 
+        <br>The PDoA phase difference is used to realize the track tracking of passive RFID tags.
         <br>
         <ul>
-          <li class="line-height-10">Full demo1:<A href="https://www.youtube.com/watch?v=a2M32Vg66Kc"> https://www.youtube.com/watch?v=a2M32Vg66Kc</A>;</li>
           <li class="line-height-10">Full demo2:<A href="https://www.youtube.com/watch?v=iz98y3m6A64"> https://www.youtube.com/watch?v=iz98y3m6A64</A>;</li>
         </ul>
       </td>
     </tr>
 
+    <tr>
+      <td class="pub_td1"><img src="./files/demo_4.gif" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>High sensitivity RFID security sensing system</b>
+        <br>
+        <br>Detect whether objects with RFID tags are moved in the monitoring area with human activities.
+        <br>
+        <ul>
+          <li class="line-height-10">Full demo1:<A href="https://www.youtube.com/watch?v=a2M32Vg66Kc"> https://www.youtube.com/watch?v=a2M32Vg66Kc</A>;</li>
+        </ul>
+      </td>
+    </tr>
 
     <tr>
       <td class="pub_td1"><img src="./files/demo_4.gif" class="papericon" width="300"></td>
