--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -212,7 +212,7 @@
          We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
         <br>
         <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
+          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s"> https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s</A>;</li>
         </ul>
       </td>
     </tr>
@@ -225,9 +225,6 @@
         <br>This paper introduces the development of a real-time uplink sensing demonstrator for PMN, 
         enabling sub-meter precision tracking in indoor environments. 
         <br>
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
-        </ul>
       </td>
     </tr>
 
@@ -240,9 +237,6 @@
         monitoring vital signs, which can perform consistently well in dynamic scenarios, 
         e.g., when some people move around the subject to be tracked, or a subject waves his/her arms and marches on the spot. 
         <br>
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
-        </ul>
       </td>
     </tr>
 
@@ -256,9 +250,6 @@
         impact of mutual coupling on a tag’s signal fingerprint and develop novel RSSI/phase-distance models.  We then 
         develop new experimental methods and signal processing techniques to verify the effectiveness of the proposed models. 
         <br>
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
-        </ul>
       </td>
     </tr>
 
@@ -270,9 +261,6 @@
         <br>In this article, we present RF-MVO that fuses RFID and computer vision for stationary RFID localization 
         in 3D space by attaching a light-weight 2D monocular camera to two reader antennas in parallel.
         <br>
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
-        </ul>
       </td>
     </tr>
 
@@ -286,9 +274,6 @@
         modulation factor of each tag in the two-element tag array, which can be estimated to compensate for the 
         distortion in RFID fingerprints.
         <br>
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
-        </ul>
       </td>
     </tr>
 
@@ -301,9 +286,6 @@
         labeled RFID system. The system would output the accurate difference in tag-to-antenna distances between 
         two tags, which is a fundamental parameter in previous works for use.
         <br>
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
-        </ul>
       </td>
     </tr>
 
@@ -316,9 +298,6 @@
         <br> In this paper, we propose a comprehensive solution, called RF-Focus, which fuses RFID and computer vision (CV) 
         techniques to recognize and locate moving RFID-tagged objects within ROI. 
         <br>
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
-        </ul>
       </td>
     </tr>
 
@@ -331,9 +310,6 @@
         RFID tags in a 3D space and recover an unknown trajectory of reader antennas binding with a 2D monocular camera. 
         The proposed hybrid system exhibits three unique features.
         <br>
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
-        </ul>
       </td>
     </tr>
 
@@ -347,9 +323,6 @@
         are sensitive to external interference, the RFID tag could be regarded as a battery-free sensor that detects 
         reflections off targeted objects. 
         <br>
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
-        </ul>
       </td>
     </tr>
 
@@ -364,9 +337,6 @@
         calibration of the reader's antenna location and spacing, and 3) enabling fine-grained calculation on the 
         orientation of the tags. All of these advantages ultimately improve the localization/tracking accuracy. 
         <br>
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
-        </ul>
       </td>
     </tr>
     
@@ -381,7 +351,7 @@
         move along a known track with constant speed, we only need to locate the tag's initial position. 
         <br>
         <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
+          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=iz98y3m6A64"> https://www.youtube.com/watch?v=iz98y3m6A64</A>;</li>
         </ul>
       </td>
     </tr>
@@ -398,7 +368,7 @@
         tracked tag before and after human motion, which can accurately distinguish absence or presence of tag motion.
         <br>
         <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
+          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=a2M32Vg66Kc"> https://www.youtube.com/watch?v=a2M32Vg66Kc</A>;</li>
         </ul>
       </td>
     </tr>
@@ -510,7 +480,7 @@
         <br>Detect whether objects with RFID tags are moved in the monitoring area with human activities.
         <br>
         <ul>
-          <li class="line-height-10">Full demo1:<A href="https://www.youtube.com/watch?v=a2M32Vg66Kc"> https://www.youtube.com/watch?v=a2M32Vg66Kc</A>;</li>
+          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=a2M32Vg66Kc"> https://www.youtube.com/watch?v=a2M32Vg66Kc</A>;</li>
         </ul>
       </td>
     </tr>
@@ -523,7 +493,7 @@
         <br>The PDoA phase difference is used to realize the track tracking of passive RFID tags.
         <br>
         <ul>
-          <li class="line-height-10">Full demo2:<A href="https://www.youtube.com/watch?v=iz98y3m6A64"> https://www.youtube.com/watch?v=iz98y3m6A64</A>;</li>
+          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=iz98y3m6A64"> https://www.youtube.com/watch?v=iz98y3m6A64</A>;</li>
         </ul>
       </td>
     </tr>
